@@ -1,5 +1,6 @@
 Running
 --------
+- Added Credential module Extract-Wifi
 - Added Trollsploit module Get-Schwifty
 
 5/15/2017
